# phazeid-api

./: Cargo.toml  LICENSE  todo
src/: apphandler.rs  main.rs
src/api/v1/: mod.rs  profile.rs  status.rs  verification.rs
src/api/v1/account/: change_avatar.rs  change_email.rs  change_username.rs  confirm_mfa.rs  delete.rs  deletion_state.rs  disable_mfa.rs  enable_mfa.rs  logout.rs  logout_oauth.rs  mod.rs  remove_oauth_app.rs  restore.rs  sessions.rs  sessions_oauth.rs  verify_change_email.rs
src/api/v1/auth/: tunnel.rs
src/api/v1/dev/: add_app.rs  mod.rs
src/api/v1/oauth/: app.rs  authorize.rs  mod.rs  profile.rs  to_delete.rs  token.rs
src/api/v1/patreon/: callback.rs  link.rs  mod.rs  refresh.rs  remove.rs
src/api/v1/verify/: mod.rs  verify.rs  verify_backup.rs  verify_email.rs  verify_mfa.rs
src/structs/: apierror.rs  ipinfo.rs  mod.rs  oauthapp.rs  oauthcode.rs  oauthsession.rs  patreon.rs  session.rs  tunnel.rs  user.rs
src/util/: avatar.rs  change_password.rs  cookies.rs  cors.rs  decrypt.rs  email.rs  encrypt.rs  ip.rs  login.rs  mod.rs  signup.rs  token.rs
templates/email/: deletion_alert.html  email_verification.html  login_alert.html  password_reset.html  restored_alert.html  signup_verification.html
