[package]
name = "phazeid-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
dotenvy = "0.15.7"
mongodb = "3.1.1"
serde_json = "1.0.135"
tokio = { version="1.42.0", features=[ "full" ] }
tower = "0.5.2"
reqwest = "0.12.12"
bson = "2.13.0"
serde = "1.0.217"
rsa = "0.9.8"
rand = "0.8.0"
base64 = "0.22.1"
axum = { version ="0.8.3", features = [ "ws", "macros", "multipart" ] }
sha2 = "0.10.8"
regex = "1.11.1"
chrono = "0.4.40"
mail-send = "0.5.0"
argon2 = "0.5.3"
tokio-util = "0.7.15"
rust-s3 = "0.35.1"
totp-rs = { version = "5.7.0", features = [ "qr" ] }
aes-gcm = "0.10.3"
blake3 = "1.8.2"
crypto = "0.5.1"
urlencoding = "2.1.3"
